--- a/find_developers.html
+++ b/find_developers.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./css/styles.css">
   </head>
   <body class="devs">
-    <header>
+    <header class="fixed">
       <div class="container clearfix">
         <h1><a href="./index.html">Startup Matchmaker</a></h1>
 
@@ -26,8 +26,8 @@
         </nav>
       </div>
     </header>
-
-    <div class="container row_1">
+<section class="relative">
+    <div class="container row_1 ">
       <ul class="profiles" >
         <li class="box col_1">
           <span class="img">280 x 280</span>
@@ -37,7 +37,8 @@
             <li>CSS</li>
             <li>JS</li>
           </ul>
-          <a href="#" class="cta contact">Contact</a>
+          <br>
+          <a href="#" class="cta cta_yellow contact">Contact</a>
         </li>
         <li class="box col_2">
           <span class="img">280 x 280</span>
@@ -47,7 +48,8 @@
             <li>CSS</li>
             <li>JS</li>
           </ul>
-          <a href="#" class="cta contact">Contact</a>
+          <br>
+          <a href="#" class="cta cta_yellow contact">Contact</a>
         </li>
         <li class="box col_3">
           <span class="img">280 x 280</span>
@@ -57,7 +59,8 @@
             <li>CSS</li>
             <li>JS</li>
           </ul>
-          <a href="#" class="cta contact">Contact</a>
+          <br>
+          <a href="#" class="cta cta_yellow contact">Contact</a>
         </li>
         <li class="box col_4">
           <span class="img">280 x 280</span>
@@ -67,7 +70,8 @@
             <li>CSS</li>
             <li>JS</li>
           </ul>
-          <a href="#" class="cta contact">Contact</a>
+          <br>
+          <a href="#" class="cta cta_yellow contact">Contact</a>
         </li>
       </ul>
     </div>
@@ -81,7 +85,8 @@
             <li>CSS</li>
             <li>JS</li>
           </ul>
-          <a href="#" class="cta contact">Contact</a>
+          <br>
+          <a href="#" class="cta cta_yellow contact">Contact</a>
         </li>
         <li class="box col_2">
           <span class="img">280 x 280</span>
@@ -91,7 +96,8 @@
             <li>CSS</li>
             <li>JS</li>
           </ul>
-          <a href="#" class="cta contact">Contact</a>
+          <br>
+          <a href="#" class="cta cta_yellow contact">Contact</a>
         </li>
         <li class="box col_3">
           <span class="img">280 x 280</span>
@@ -101,7 +107,8 @@
             <li>CSS</li>
             <li>JS</li>
           </ul>
-          <a href="#" class="cta contact">Contact</a>
+          <br>
+          <a href="#" class="cta cta_yellow contact">Contact</a>
         </li>
         <li class="box col_4">
           <span class="img">280 x 280</span>
@@ -111,7 +118,8 @@
             <li>CSS</li>
             <li>JS</li>
           </ul>
-          <a href="#" class="cta contact">Contact</a>
+          <br>
+          <a href="#" class="cta cta_yellow contact">Contact</a>
         </li>
       </ul>
     </div>
@@ -125,7 +133,8 @@
             <li>CSS</li>
             <li>JS</li>
           </ul>
-          <a href="#" class="cta contact">Contact</a>
+          <br>
+          <a href="#" class="cta cta_yellow contact">Contact</a>
         </li>
         <li class="box col_2">
           <span class="img">280 x 280</span>
@@ -135,7 +144,8 @@
             <li>CSS</li>
             <li>JS</li>
           </ul>
-          <a href="#" class="cta contact">Contact</a>
+          <br>
+          <a href="#" class="cta cta_yellow contact">Contact</a>
         </li>
         <li class="box col_3">
           <span class="img">280 x 280</span>
@@ -145,7 +155,8 @@
             <li>CSS</li>
             <li>JS</li>
           </ul>
-          <a href="#" class="cta contact">Contact</a>
+          <br>
+          <a href="#" class="cta cta_yellow contact">Contact</a>
         </li>
         <li class="box col_4">
           <span class="img">280 x 280</span>
@@ -155,13 +166,15 @@
             <li>CSS</li>
             <li>JS</li>
           </ul>
-          <a href="#" class="cta contact">Contact</a>
+          br
+          <a href="#" class="cta cta_yellow contact">Contact</a>
         </li>
       </ul>
     </div>
+</section>
 
  
-    <footer>
+    <footer class="relative">
       <div class="container">
         <span class="cr">&copy; 2013 Startup Matchmaker. Made in NY.</span>
       </div>
