--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
 
-    <header>
+    <header class="fixed">
       <div class="container clearfix">
         <h1>Startup Matchmaker</h1>
 
@@ -28,7 +28,7 @@
       </div>
     </header>
 
-    <section class="strapline">
+    <section class="strapline relative">
       <div class="container">
         <p>Because two brains <del>taste</del> <ins>are</ins> better than one.</p>
       </div>
