--- a/find_designers.html
+++ b/find_designers.html
@@ -1,21 +1,182 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-  	<meta charset="UTF-8">
-  	<title>Startup Matchmaker</title>
+    <meta charset="UTF-8">
+    <title>SM|Designers Page</title>
 
-  	<!-- 'Source Sans Pro', 'Oswald' and 'Merriweather' -->
-  	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Oswald:700|Merriweather:700,700italic' rel='stylesheet' type='text/css'>
+    <!-- 'Source Sans Pro', 'Oswald' and 'Merriweather' -->
+    <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Oswald:700|Merriweather:700,700italic' rel='stylesheet' type='text/css'>
 
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/styles.css">
   </head>
-  <body>
+  <body class="devs">
+    <header class="fixed">
+      <div class="container clearfix">
+        <h1><a href="./index.html">Startup Matchmaker</a></h1>
 
-    
-    <footer>
+        <nav>
+          <ul class="header">
+            <li><a href="./find_developers.html">Find Developers</a></li>
+            <li><a href="#" class="selected">Find Designers</a></li>
+            <li><a href="#">How it works</a></li>
+            <li><a href="#">Our Team</a></li>
+            <li><a href="#">Blog</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <section class=" profiles relative">
+        <div class="container row_1 ">
+          <ul class="profiles" >
+            <li class="box col_1">
+              <img class="photo" src="./images/placeholder.png" alt="Some Person">
+              <figcaption>Some Person</figcaption>
+              <ul class="skills">
+                <li>Sketch</li>
+                <li>Adobe CC</li>
+                <li>Branding</li>
+              </ul>
+              <br>
+              <a href="#" class="cta cta_yellow contact">Contact</a>
+            </li>
+            <li class="box col_2">
+               <img class="photo" src="./images/placeholder.png" alt="Some Person">
+               <figcaption>Some Person</figcaption>
+               <ul class="skills">
+                <li>Sketch</li>
+                <li>Adobe CC</li>
+                <li>Branding</li>
+              </ul>
+              <br>
+              <a href="#" class="cta cta_yellow contact">Contact</a>
+            </li>
+            <li class="box col_3">
+               <img class="photo" src="./images/placeholder.png" alt="Some Person">
+               <figcaption>Some Person</figcaption>
+               <ul class="skills">
+                <li>Sketch</li>
+                <li>Adobe CC</li>
+                <li>Branding</li>
+              </ul>
+              <br>
+              <a href="#" class="cta cta_yellow contact">Contact</a>
+            </li>
+            <li class="box col_4">
+               <img class="photo" src="./images/placeholder.png" alt="Some Person">
+               <figcaption>Some Person</figcaption>
+               <ul class="skills">
+                <li>Sketch</li>
+                <li>Adobe CC</li>
+                <li>Branding</li>
+              </ul>
+              <br>
+              <a href="#" class="cta cta_yellow contact">Contact</a>
+            </li>
+          </ul>
+        </div>
+        <div class="container row_2">
+          <ul class="profiles" >
+            <li class="box col_1">
+              <img class="photo" src="./images/placeholder.png" alt="Some Person">
+              <figcaption>Some Person</figcaption>
+              <ul class="skills">
+                <li>Sketch</li>
+                <li>Adobe CC</li>
+                <li>Branding</li>
+              </ul>
+              <br>
+              <a href="#" class="cta cta_yellow contact">Contact</a>
+            </li>
+            <li class="box col_2">
+              <img class="photo" src="./images/placeholder.png" alt="Some Person">
+              <figcaption>Some Person</figcaption>
+              <ul class="skills">
+                <li>Sketch</li>
+                <li>Adobe CC</li>
+                <li>Branding</li>
+              </ul>
+              <br>
+              <a href="#" class="cta cta_yellow contact">Contact</a>
+            </li>
+            <li class="box col_3">
+              <img class="photo" src="./images/placeholder.png" alt="Some Person">
+              <figcaption>Some Person</figcaption>
+              <ul class="skills">
+                <li>Sketch</li>
+                <li>Adobe CC</li>
+                <li>Branding</li>
+              </ul>
+              <br>
+              <a href="#" class="cta cta_yellow contact">Contact</a>
+            </li>
+            <li class="box col_4">
+              <img class="photo" src="./images/placeholder.png" alt="Some Person">
+              <figcaption>Some Person</figcaption>
+              <ul class="skills">
+                <li>Sketch</li>
+                <li>Adobe CC</li>
+                <li>Branding</li>
+              </ul>
+              <br>
+              <a href="#" class="cta cta_yellow contact">Contact</a>
+            </li>
+          </ul>
+        </div>
+        <div class="container row_3">
+          <ul class="profiles">
+            <li class="box col_1">
+              <img class="photo" src="./images/placeholder.png" alt="Some Person">
+              <figcaption>Some Person</figcaption>
+              <ul class="skills">
+                <li>Sketch</li>
+                <li>Adobe CC</li>
+                <li>Branding</li>
+              </ul>
+              <br>
+              <a href="#" class="cta cta_yellow contact">Contact</a>
+            </li>
+            <li class="box col_2">
+              <img class="photo" src="./images/placeholder.png" alt="Some Person">
+              <figcaption>Some Person</figcaption>
+              <ul class="skills">
+                <li>Sketch</li>
+                <li>Adobe CC</li>
+                <li>Branding</li>
+              </ul>
+              <br>
+              <a href="#" class="cta cta_yellow contact">Contact</a>
+            </li>
+            <li class="box col_3">
+              <img class="photo" src="./images/placeholder.png" alt="Some Person">
+              <figcaption>Some Person</figcaption>
+              <ul class="skills">
+                <li>Sketch</li>
+                <li>Adobe CC</li>
+                <li>Branding</li>
+              </ul>
+              <br>
+              <a href="#" class="cta cta_yellow contact">Contact</a>
+            </li>
+            <li class="box col_4">
+              <img class="photo" src="./images/placeholder.png" alt="Some Person">
+              <figcaption>Some Person</figcaption>
+              <ul class="skills">
+                <li>Sketch</li>
+                <li>Adobe CC</li>
+                <li>Branding</li>
+              </ul>
+              br
+              <a href="#" class="cta cta_yellow contact">Contact</a>
+            </li>
+          </ul>
+        </div>
+    </section>
+
+ 
+    <footer class="relative">
       <div class="container">
-        <span>&copy; 2013 Startup Matchmaker. Made in NY.</span>
+        <span class="cr">&copy; 2013 Startup Matchmaker. Made in NY.</span>
       </div>
     </footer>
 
