--- a/find_developers.html
+++ b/find_developers.html
@@ -17,8 +17,8 @@
 
         <nav>
           <ul class="header">
-            <li><a href="#">Find Developers</a></li>
-            <li><a href="#">Find Designers</a></li>
+            <li><a href="#" class="selected">Find Developers</a></li>
+            <li><a href="./find_designers.html">Find Designers</a></li>
             <li><a href="#">How it works</a></li>
             <li><a href="#">Our Team</a></li>
             <li><a href="#">Blog</a></li>
@@ -26,152 +26,152 @@
         </nav>
       </div>
     </header>
-<section class="relative">
-    <div class="container row_1 ">
-      <ul class="profiles" >
-        <li class="box col_1">
-          <span class="img">280 x 280</span>
-          <h4>Some Person</h4>
-          <ul class="skills">
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>JS</li>
+    <section class=" profiles relative">
+        <div class="container row_1 ">
+          <ul class="profiles" >
+            <li class="box col_1">
+              <img class="photo" src="./images/placeholder.png" alt="Some Person">
+              <figcaption>Some Person</figcaption>
+              <ul class="skills">
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JS</li>
+              </ul>
+              <br>
+              <a href="#" class="cta cta_yellow contact">Contact</a>
+            </li>
+            <li class="box col_2">
+              <img class="photo" src="./images/placeholder.png" alt="Some Person">
+              <figcaption>Some Person</figcaption>
+              <ul class="skills">
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JS</li>
+              </ul>
+              <br>
+              <a href="#" class="cta cta_yellow contact">Contact</a>
+            </li>
+            <li class="box col_3">
+              <img class="photo" src="./images/placeholder.png" alt="Some Person">
+              <figcaption>Some Person</figcaption>
+              <ul class="skills">
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JS</li>
+              </ul>
+              <br>
+              <a href="#" class="cta cta_yellow contact">Contact</a>
+            </li>
+            <li class="box col_4">
+              <img class="photo" src="./images/placeholder.png" alt="Some Person">
+              <figcaption>Some Person</figcaption>
+              <ul class="skills">
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JS</li>
+              </ul>
+              <br>
+              <a href="#" class="cta cta_yellow contact">Contact</a>
+            </li>
           </ul>
-          <br>
-          <a href="#" class="cta cta_yellow contact">Contact</a>
-        </li>
-        <li class="box col_2">
-          <span class="img">280 x 280</span>
-          <h4>Some Person</h4>
-          <ul class="skills">
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>JS</li>
+        </div>
+        <div class="container row_2">
+          <ul class="profiles" >
+            <li class="box col_1">
+              <img class="photo" src="./images/placeholder.png" alt="Some Person">
+              <figcaption>Some Person</figcaption>
+              <ul class="skills">
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JS</li>
+              </ul>
+              <br>
+              <a href="#" class="cta cta_yellow contact">Contact</a>
+            </li>
+            <li class="box col_2">
+              <img class="photo" src="./images/placeholder.png" alt="Some Person">
+              <figcaption>Some Person</figcaption>
+              <ul class="skills">
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JS</li>
+              </ul>
+              <br>
+              <a href="#" class="cta cta_yellow contact">Contact</a>
+            </li>
+            <li class="box col_3">
+              <img class="photo" src="./images/placeholder.png" alt="Some Person">
+              <figcaption>Some Person</figcaption>
+              <ul class="skills">
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JS</li>
+              </ul>
+              <br>
+              <a href="#" class="cta cta_yellow contact">Contact</a>
+            </li>
+            <li class="box col_4">
+              <img class="photo" src="./images/placeholder.png" alt="Some Person">
+              <figcaption>Some Person</figcaption>
+              <ul class="skills">
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JS</li>
+              </ul>
+              <br>
+              <a href="#" class="cta cta_yellow contact">Contact</a>
+            </li>
           </ul>
-          <br>
-          <a href="#" class="cta cta_yellow contact">Contact</a>
-        </li>
-        <li class="box col_3">
-          <span class="img">280 x 280</span>
-          <h4>Some Person</h4>
-          <ul class="skills">
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>JS</li>
+        </div>
+        <div class="container row_3">
+          <ul class="profiles">
+            <li class="box col_1">
+              <img class="photo" src="./images/placeholder.png" alt="Some Person">
+              <figcaption>Some Person</figcaption>
+              <ul class="skills">
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JS</li>
+              </ul>
+              <br>
+              <a href="#" class="cta cta_yellow contact">Contact</a>
+            </li>
+            <li class="box col_2">
+              <img class="photo" src="./images/placeholder.png" alt="Some Person">
+              <figcaption>Some Person</figcaption>
+              <ul class="skills">
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JS</li>
+              </ul>
+              <br>
+              <a href="#" class="cta cta_yellow contact">Contact</a>
+            </li>
+            <li class="box col_3">
+              <img class="photo" src="./images/placeholder.png" alt="Some Person">
+              <figcaption>Some Person</figcaption>
+              <ul class="skills">
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JS</li>
+              </ul>
+              <br>
+              <a href="#" class="cta cta_yellow contact">Contact</a>
+            </li>
+            <li class="box col_4">
+              <img class="photo" src="./images/placeholder.png" alt="Some Person">
+              <figcaption>Some Person</figcaption>
+              <ul class="skills">
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JS</li>
+              </ul>
+              br
+              <a href="#" class="cta cta_yellow contact">Contact</a>
+            </li>
           </ul>
-          <br>
-          <a href="#" class="cta cta_yellow contact">Contact</a>
-        </li>
-        <li class="box col_4">
-          <span class="img">280 x 280</span>
-          <h4>Some Person</h4>
-          <ul class="skills">
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>JS</li>
-          </ul>
-          <br>
-          <a href="#" class="cta cta_yellow contact">Contact</a>
-        </li>
-      </ul>
-    </div>
-    <div class="container row_2">
-      <ul class="profiles" >
-        <li class="box col_1">
-          <span class="img">280 x 280</span>
-          <h4>Some Person</h4>
-          <ul class="skills">
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>JS</li>
-          </ul>
-          <br>
-          <a href="#" class="cta cta_yellow contact">Contact</a>
-        </li>
-        <li class="box col_2">
-          <span class="img">280 x 280</span>
-          <h4>Some Person</h4>
-          <ul class="skills">
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>JS</li>
-          </ul>
-          <br>
-          <a href="#" class="cta cta_yellow contact">Contact</a>
-        </li>
-        <li class="box col_3">
-          <span class="img">280 x 280</span>
-          <h4>Some Person</h4>
-          <ul class="skills">
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>JS</li>
-          </ul>
-          <br>
-          <a href="#" class="cta cta_yellow contact">Contact</a>
-        </li>
-        <li class="box col_4">
-          <span class="img">280 x 280</span>
-          <h4>Some Person</h4>
-          <ul class="skills">
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>JS</li>
-          </ul>
-          <br>
-          <a href="#" class="cta cta_yellow contact">Contact</a>
-        </li>
-      </ul>
-    </div>
-    <div class="container row_3">
-      <ul class="profiles">
-        <li class="box col_1">
-          <span class="img">280 x 280</span>
-          <h4>Some Person</h4>
-          <ul class="skills">
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>JS</li>
-          </ul>
-          <br>
-          <a href="#" class="cta cta_yellow contact">Contact</a>
-        </li>
-        <li class="box col_2">
-          <span class="img">280 x 280</span>
-          <h4>Some Person</h4>
-          <ul class="skills">
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>JS</li>
-          </ul>
-          <br>
-          <a href="#" class="cta cta_yellow contact">Contact</a>
-        </li>
-        <li class="box col_3">
-          <span class="img">280 x 280</span>
-          <h4>Some Person</h4>
-          <ul class="skills">
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>JS</li>
-          </ul>
-          <br>
-          <a href="#" class="cta cta_yellow contact">Contact</a>
-        </li>
-        <li class="box col_4">
-          <span class="img">280 x 280</span>
-          <h4>Some Person</h4>
-          <ul class="skills">
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>JS</li>
-          </ul>
-          br
-          <a href="#" class="cta cta_yellow contact">Contact</a>
-        </li>
-      </ul>
-    </div>
-</section>
+        </div>
+    </section>
 
  
     <footer class="relative">
