--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <nav>
           <ul class="header">
             <li><a href="./find_developers.html">Find Developers</a></li>
-            <li><a href="#">Find Designers</a></li>
+            <li><a href="./find_designers.html">Find Designers</a></li>
             <li><a href="#">How it works</a></li>
             <li><a href="#">Our Team</a></li>
             <li><a href="#">Blog</a></li>
